Closed Bug 303005 Opened 21 years ago Closed 21 years ago

ASSERTION: Negative Height Input - very bad: 'mComputedHeight >= 0'

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8beta4

People

(Reporter: bc, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

ASSERTION: Negative Height Input - very bad: 'mComputedHeight >= 0', file c:/work/mozilla/builds/ff/trunk/mozilla/layout/generic/nsHTMLReflowState.cpp, line 2566 Found using a CVS debug build from 7/31 on WinXP during top site testing of 5469 pages. It appears to be new although I don't have good history of logs for full top site testing. I doubt this is related to the splitwindow bug, but ccing jst just in case.
Attached patch Proposed patchSplinter Review
This doesn't look splitwindow-related. The basic problem is that the quirk percent height computation subtracts out the margins of the body/html from the available height, and this can make the whole thing negative...
Attachment #191299 - Flags: superreview?(dbaron)
Attachment #191299 - Flags: review?(dbaron)
Attachment #191299 - Flags: superreview?(dbaron)
Attachment #191299 - Flags: superreview+
Attachment #191299 - Flags: review?(dbaron)
Attachment #191299 - Flags: review+
Attachment #191299 - Flags: approval1.8b4?
Attachment #191299 - Flags: approval1.8b4? → approval1.8b4+
Fixed.
Assignee: nobody → bzbarsky
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: