Make sure to not return a negative containing block height when computing a quirks percentage height containing block.  Bug 303005, r+sr=dbaron, a=bsmedberg